--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -7,7 +7,7 @@ body {
 
 h1 {
   font-size: 4rem;
-  color: #000;
+  color: #000 !important;
 }
 
 h2 {
@@ -15,10 +15,10 @@ h2 {
 }
 
 p {
-  max-width: none;
+  max-width: none !important;
 }
 
-button:not(.glitchButton) {
+button:not(.glitchButtonElement,.buttonLinks) {
   border: 2px solid #000000;
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -34,11 +34,11 @@ button:not(.glitchButton) {
   transition: all 0.2s ease, background-color 0.5s ease;
 }
 
-button:not(.glitchButton):hover {
+button:not(.glitchButtonElement):hover {
   background-color: #037f51;
 }
 
-button:not(.glitchButton):active {
+button:not(.glitchButtonElement):active {
   background-color: #106b5a;
   margin: 20px 20px 0px 0;
   -webkit-box-shadow: 0 0 0 #fff;
