--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -18,7 +18,7 @@ p {
   max-width: none !important;
 }
 
-button:not(.glitchButtonElement,.buttonLinks) {
+button:not(.glitchButtonElement, .buttonLinks) {
   border: 2px solid #000000;
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -34,11 +34,11 @@ button:not(.glitchButtonElement,.buttonLinks) {
   transition: all 0.2s ease, background-color 0.5s ease;
 }
 
-button:not(.glitchButtonElement):hover {
+button:hover {
   background-color: #037f51;
 }
 
-button:not(.glitchButtonElement):active {
+button:active {
   background-color: #106b5a;
   margin: 20px 20px 0px 0;
   -webkit-box-shadow: 0 0 0 #fff;
@@ -377,6 +377,99 @@ button:not(.glitchButtonElement):active {
 
 #page-4 .display .restart-button button:hover {
   cursor: pointer;
+}
+
+#page-4 .display .toggle-container {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 10px;
+}
+
+#page-4 .display #contContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#page-4 .display #contContainer h3 {
+  margin: 0 30px;
+  min-width: 50%;
+}
+
+#page-4 .display #contContainer .switch,
+#page-4 .display .toggle-container .switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+#page-4 .display #contContainer .switch input,
+#page-4 .display .toggle-container .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+#page-4 .display #contContainer .switch .slider,
+#page-4 .display .toggle-container .switch .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+#page-4 .display #contContainer .switch .slider::before,
+#page-4 .display .toggle-container .switch .slider::before {
+  position: absolute;
+  content: '';
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+#page-4 .display #contContainer .switch input:checked + .slider,
+#page-4 .display .toggle-container .switch input:checked + .slider {
+  background-color: #2196f3;
+}
+
+#page-4 .display #contContainer .switch input:focus + .slider,
+#page-4 .display .toggle-container .switch input:focus + .slider {
+  -webkit-box-shadow: 0 0 1px #2196f3;
+          box-shadow: 0 0 1px #2196f3;
+}
+
+#page-4 .display #contContainer .switch input:checked + .slider:before,
+#page-4 .display .toggle-container .switch input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+#page-4 .display #contContainer .switch .slider.round,
+#page-4 .display .toggle-container .switch .slider.round {
+  border-radius: 34px;
+}
+
+#page-4 .display #contContainer .switch .slider.round:before,
+#page-4 .display .toggle-container .switch .slider.round:before {
+  border-radius: 50%;
 }
 
 #page-4 .loading:after {
