💽🌞 Checkpoint ./public/styles/index.css:30744812/11

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -35,7 +35,7 @@ button:not(.glitchButtonElement, .buttonLinks) {
 }
 
 button:hover {
-  background-color: #037f51;
+  background-color: #037f51 !important;
 }
 
 button:active {
