--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,4 +1,3 @@
-/* Start: Variables */
 /* End: Variables */
 /* Standard Elements: Start */
 body {
@@ -56,36 +55,17 @@ button:active {
   display: none !important;
 }
 
-.nav {
-  background-color: #3d3d3d;
-  width: 100%;
-  height: 100px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  color: #fff;
-  font-weight: 700;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.nav p {
+.sub-title {
+  font-weight: 800;
+  margin: auto;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  margin: 0 80px;
+  font-size: 1.5rem;
 }
 
-.nav a {
-  text-decoration: none;
-  color: #fff;
+.fas {
+  font-size: 7rem;
 }
 
 .input-container {
@@ -130,79 +110,34 @@ button:active {
           box-shadow: 0 0 0 0 #fff;
 }
 
-#page-1, #page-2, #page-3 {
-  margin: 100px 2em 2em;
+#page-1, #page-2 {
+  margin: 3em 2em 2em;
 }
 
-#page-4 {
+#page-3 {
   margin: 1em;
 }
 
 /* Document Wide: End */
 /* Page One: Start*/
-.title {
-  margin: auto;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  font-size: 4rem;
-  padding: 0 50px 20px;
-}
-
-.sub-title {
-  font-weight: 800;
-  margin: auto;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  font-size: 1.5rem;
-}
-
-.models {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 70%;
-  margin: 100px auto;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.models button {
-  height: 350px;
-  width: 350px;
-  border-radius: 50px;
-}
-
-.models h2 {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin: 20px auto;
-}
-
-.fas {
-  font-size: 7rem;
-}
-
-/* Page One: End*/
-/* Page Two: Start*/
-#page-2 {
-  display: none;
-  padding: 240px 0 0;
+#page-1 {
   text-align: center;
 }
 
-#page-2 p {
-  width: 30%;
+#page-1 .title {
+  text-transform: uppercase;
+  text-shadow: 5px 5px #c9c6c6;
+  font-size: 5.5rem;
+  text-align: left;
+  margin: 0 0 30px;
 }
 
-#page-2 .page-container {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+#page-1 p {
+  text-align: left;
+  margin: 0;
+}
+
+#page-1 .page-container {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -211,22 +146,70 @@ button:active {
   display: flex;
 }
 
-#requestPortButton {
+#page-1 .page-container .sctn {
+  max-width: 50%;
+  padding: 0 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#page-1 .page-container .sctn .paragraph {
+  text-align: left;
+  margin: 0;
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+
+#page-1 .page-container .sctn .btn-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#page-1 .page-container .sctn .btn-container #requestPortButton {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  padding: 0 80px;
+  padding: 0 150px;
   border-radius: 100px;
   border: 2px solid #000;
-  margin-bottom: 45px;
+  margin: 60px 0 45px;
   overflow: hidden;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
-#requestPortButton:active {
-  margin: 20px 24px 29px -4px;
+#page-1 .page-container .sctn .btn-container #requestPortButton h1 {
+  font-size: 2rem;
+}
+
+#page-1 .page-container .sctn .btn-container #requestPortButton:active {
+  margin: 65px 14px 34px -14px;
   -webkit-box-shadow: 0 0 0 #fff;
           box-shadow: 0 0 0 #fff;
   border: 5px solid #000;
+}
+
+#page-1 .page-container .sctn .btn-container .btn-sub {
+  text-align: center;
+  width: 50%;
+}
+
+#page-1 .page-container .img-sctn {
+  width: 45%;
 }
 
 @-webkit-keyframes hueRotation {
@@ -243,13 +226,13 @@ button:active {
   }
 }
 
-/* Page Two: End*/
-/* Page Three: Start*/
-#page-3 p {
+/* Page One: End*/
+/* Page Two: Start*/
+#page-2 p {
   margin: 18px;
 }
 
-#page-3 #connectPort {
+#page-2 #connectPort {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -266,13 +249,13 @@ button:active {
   height: 500px;
 }
 
-/* Page Three: End*/
-/* Page Four: Start*/
-#page-4 h1 {
+/* Page Two: End*/
+/* Page Three: Start*/
+#page-3 h1 {
   margin: 30px 30px 20px;
 }
 
-#page-4 #startButton {
+#page-3 #startButton {
   width: 80%;
   padding: 15px 37px;
   border-radius: 100px;
@@ -283,36 +266,36 @@ button:active {
   margin: 25px;
 }
 
-#page-4 #startButton:active {
+#page-3 #startButton:active {
   -webkit-box-shadow: 0 0 0 0 #fff;
           box-shadow: 0 0 0 0 #fff;
   margin: 30px 0 20px;
 }
 
-#page-4 #startButton:hover {
+#page-3 #startButton:hover {
   cursor: pointer;
 }
 
-#page-4 .webcam-container {
+#page-3 .webcam-container {
   width: 65vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-#page-4 .webcam-container canvas {
+#page-3 .webcam-container canvas {
   border: 4px solid #000;
   border-radius: 7px;
   width: 44vw;
   margin: 0 auto;
 }
 
-#page-4 #audio-container {
+#page-3 #audio-container {
   display: none;
   text-align: center;
 }
 
-#page-4 .page-container {
+#page-3 .page-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -321,7 +304,7 @@ button:active {
           align-items: center;
 }
 
-#page-4 .display {
+#page-3 .display {
   border: 3px solid #000;
   width: 33%;
   position: relative;
@@ -340,7 +323,7 @@ button:active {
   height: 90vh;
 }
 
-#page-4 .display .undercard {
+#page-3 .display .undercard {
   color: #fff;
   font-weight: 700;
   background-color: #000;
@@ -349,16 +332,16 @@ button:active {
   text-align: center;
 }
 
-#page-4 .display .undercard p {
+#page-3 .display .undercard p {
   margin: 0;
   font-size: 1.3rem;
 }
 
-#page-4 .display .restart-button {
+#page-3 .display .restart-button {
   width: 80%;
 }
 
-#page-4 .display .restart-button button {
+#page-3 .display .restart-button button {
   width: 100%;
   padding: 15px 37px;
   border-radius: 100px;
@@ -369,24 +352,24 @@ button:active {
   margin: 25px 0;
 }
 
-#page-4 .display .restart-button button:active {
+#page-3 .display .restart-button button:active {
   -webkit-box-shadow: 0 0 0 0 #fff;
           box-shadow: 0 0 0 0 #fff;
   margin: 30px 0 20px;
 }
 
-#page-4 .display .restart-button button:hover {
+#page-3 .display .restart-button button:hover {
   cursor: pointer;
 }
 
-#page-4 .display .toggle-container {
+#page-3 .display .toggle-container {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   margin: 0 10px;
 }
 
-#page-4 .display #contContainer {
+#page-3 .display #contContainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -399,28 +382,28 @@ button:active {
           justify-content: center;
 }
 
-#page-4 .display #contContainer h3 {
+#page-3 .display #contContainer h3 {
   margin: 0 30px;
   min-width: 50%;
 }
 
-#page-4 .display #contContainer .switch,
-#page-4 .display .toggle-container .switch {
+#page-3 .display #contContainer .switch,
+#page-3 .display .toggle-container .switch {
   position: relative;
   display: inline-block;
   width: 60px;
   height: 34px;
 }
 
-#page-4 .display #contContainer .switch input,
-#page-4 .display .toggle-container .switch input {
+#page-3 .display #contContainer .switch input,
+#page-3 .display .toggle-container .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-#page-4 .display #contContainer .switch .slider,
-#page-4 .display .toggle-container .switch .slider {
+#page-3 .display #contContainer .switch .slider,
+#page-3 .display .toggle-container .switch .slider {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -432,8 +415,8 @@ button:active {
   transition: 0.4s;
 }
 
-#page-4 .display #contContainer .switch .slider::before,
-#page-4 .display .toggle-container .switch .slider::before {
+#page-3 .display #contContainer .switch .slider::before,
+#page-3 .display .toggle-container .switch .slider::before {
   position: absolute;
   content: '';
   height: 26px;
@@ -445,34 +428,34 @@ button:active {
   transition: 0.4s;
 }
 
-#page-4 .display #contContainer .switch input:checked + .slider,
-#page-4 .display .toggle-container .switch input:checked + .slider {
+#page-3 .display #contContainer .switch input:checked + .slider,
+#page-3 .display .toggle-container .switch input:checked + .slider {
   background-color: #2196f3;
 }
 
-#page-4 .display #contContainer .switch input:focus + .slider,
-#page-4 .display .toggle-container .switch input:focus + .slider {
+#page-3 .display #contContainer .switch input:focus + .slider,
+#page-3 .display .toggle-container .switch input:focus + .slider {
   -webkit-box-shadow: 0 0 1px #2196f3;
           box-shadow: 0 0 1px #2196f3;
 }
 
-#page-4 .display #contContainer .switch input:checked + .slider:before,
-#page-4 .display .toggle-container .switch input:checked + .slider:before {
+#page-3 .display #contContainer .switch input:checked + .slider:before,
+#page-3 .display .toggle-container .switch input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   transform: translateX(26px);
 }
 
-#page-4 .display #contContainer .switch .slider.round,
-#page-4 .display .toggle-container .switch .slider.round {
+#page-3 .display #contContainer .switch .slider.round,
+#page-3 .display .toggle-container .switch .slider.round {
   border-radius: 34px;
 }
 
-#page-4 .display #contContainer .switch .slider.round:before,
-#page-4 .display .toggle-container .switch .slider.round:before {
+#page-3 .display #contContainer .switch .slider.round:before,
+#page-3 .display .toggle-container .switch .slider.round:before {
   border-radius: 50%;
 }
 
-#page-4 .loading:after {
+#page-3 .loading:after {
   overflow: hidden;
   display: inline-block;
   vertical-align: bottom;
@@ -483,16 +466,16 @@ button:active {
   width: 0px;
 }
 
-#page-4 .disabled {
+#page-3 .disabled {
   pointer-events: none;
 }
 
-#page-4 .input-container {
+#page-3 .input-container {
   width: 80%;
   margin: 60px 30px 10px;
 }
 
-#page-4 #results {
+#page-3 #results {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -507,25 +490,25 @@ button:active {
   height: 100vh;
 }
 
-#page-4 #results h2 {
+#page-3 #results h2 {
   margin: 10px 40px;
 }
 
-#page-4 #results #label-container {
+#page-3 #results #label-container {
   overflow-y: auto;
 }
 
-#page-4 #results #label-container div:nth-of-type(even) {
+#page-3 #results #label-container div:nth-of-type(even) {
   background-color: #fff;
   color: #000;
 }
 
-#page-4 #results #label-container div:nth-of-type(odd) {
+#page-3 #results #label-container div:nth-of-type(odd) {
   background-color: #000;
   color: #fff;
 }
 
-#page-4 #results #label-container .meter {
+#page-3 #results #label-container .meter {
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
   text-transform: uppercase;
@@ -546,13 +529,13 @@ button:active {
   height: fit-content;
 }
 
-#page-4 #results #label-container .meter .meter-container {
+#page-3 #results #label-container .meter .meter-container {
   width: 50%;
   background-color: #d5e6da;
   border-radius: 4px;
 }
 
-#page-4 #results #label-container .meter .meter-container span {
+#page-3 #results #label-container .meter .meter-container span {
   height: 25px;
   border-radius: 4px;
   background-color: #2bc253;
@@ -566,18 +549,18 @@ button:active {
   transition: width 0.35s ease-in-out;
 }
 
-#page-4 #results #label-container .meter .meter-container span p {
+#page-3 #results #label-container .meter .meter-container span p {
   width: 100%;
   color: #000;
 }
 
-#page-4 #results #label-container .meter .label,
-#page-4 #results #label-container .meter p {
+#page-3 #results #label-container .meter .label,
+#page-3 #results #label-container .meter p {
   margin: 0 10px;
   width: 40%;
 }
 
-#page-4 #results #label-container .meter .label {
+#page-3 #results #label-container .meter .label {
   word-wrap: break-word;
 }
 
@@ -593,5 +576,44 @@ button:active {
   }
 }
 
-/* Page Four: End*/
+/* Page Three: End*/
+/* Mobile: Start*/
+@media only screen and (max-width: 1440px) {
+  #page-1 {
+    margin: 54px 2em 2em;
+  }
+  #page-1 .title {
+    font-size: 4.5rem;
+    margin: 0 0 30px;
+  }
+  #page-1 .page-container {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  #page-1 .page-container .sctn {
+    padding: 0;
+  }
+  #page-1 .page-container .sctn .btn-sub {
+    width: 68% !important;
+  }
+  #page-1 .page-container .sctn .paragraph {
+    font-size: 1rem;
+  }
+  #page-1 .page-container .sctn #requestPortButton {
+    padding: 0 !important;
+    width: 100% !important;
+  }
+  #page-2 .input-container {
+    width: 55%;
+  }
+  #page-3 .webcam-container {
+    width: 56vw;
+  }
+  #page-3 .display {
+    width: 40%;
+  }
+}
+
+/* Mobile: End*/
 /*# sourceMappingURL=index.css.map */
