--- a/public/styles/index.scss
+++ b/public/styles/index.scss
@@ -13,7 +13,7 @@ body {
 	background-color: #f0f0f0;
 }
 
-h1 {
+h1:not(.title) {
 	font-size: 4rem;
 	color: #000 !important;
 }
@@ -52,6 +52,10 @@ button:not(#alert-ok):not(.glitchButtonElement) {
 /* Standard Elements: End */
 
 /* Document Wide: Start */
+#desktop-only {
+	display: none;
+}
+
 #overlay {
 	position: fixed; /* Sit on top of the page content */
 	display: none; /* Hidden by default */
@@ -212,6 +216,41 @@ button:not(#alert-ok):not(.glitchButtonElement) {
 	}
 }
 
+.settings {
+	position: relative;
+	display: inline-block;
+
+	.settings-tooltip {
+		visibility: hidden;
+		width: 120px;
+		background-color: black;
+		color: #fff;
+		text-align: center;
+		border-radius: 6px;
+		padding: 5px 0;
+		position: absolute;
+		z-index: 1;
+		bottom: 150%;
+		left: 50%;
+		margin-left: -60px;
+
+		&::after {
+			content: '';
+			position: absolute;
+			top: 100%;
+			left: 50%;
+			margin-left: -5px;
+			border-width: 5px;
+			border-style: solid;
+			border-color: black transparent transparent transparent;
+		}
+	}
+
+	&:hover .settings-tooltip {
+		visibility: visible;
+	}
+}
+
 .info-text,
 .popuptext {
 	background-color: #ffe7ba;
@@ -241,9 +280,6 @@ button:not(#alert-ok):not(.glitchButtonElement) {
 }
 
 #page {
-	&-1 {
-		padding: 3em 2em 2em;
-	}
 	&-3 {
 		padding: 1em;
 	}
@@ -256,7 +292,7 @@ button:not(#alert-ok):not(.glitchButtonElement) {
 
 /* Page One: Start*/
 #page-1 {
-	background-color: $primaryYellow;
+	background-color: #9dcddf;
 	width: 100%;
 	box-sizing: border-box;
 	a {
@@ -269,8 +305,9 @@ button:not(#alert-ok):not(.glitchButtonElement) {
 	}
 
 	.title {
+		color: #fff;
 		text-transform: uppercase;
-		text-shadow: 3px 3px #fff;
+		text-shadow: 6px 6px #000;
 		font-size: 5.5rem;
 		text-align: left;
 		margin: 0px 0 60px;
@@ -286,7 +323,7 @@ button:not(#alert-ok):not(.glitchButtonElement) {
 	.page-container {
 		align-items: center;
 		display: flex;
-
+		padding: 3em 3em 2em;
 		.sctn {
 			max-width: 50%;
 			padding: 0 50px;
@@ -305,7 +342,7 @@ button:not(#alert-ok):not(.glitchButtonElement) {
 					margin: 60px 0 45px;
 					overflow: hidden;
 					align-self: center;
-
+					background-color: #ffda95;
 					h1 {
 						font-size: 1.5rem;
 					}
@@ -343,7 +380,9 @@ button:not(#alert-ok):not(.glitchButtonElement) {
 		margin: 80px 0;
 		display: flex;
 		justify-content: space-around;
-
+		margin: 3em 2em 2em;
+		position: relative;
+		z-index: 2;
 		span {
 			width: 25%;
 			.btn-cont {
@@ -368,6 +407,20 @@ button:not(#alert-ok):not(.glitchButtonElement) {
 			.main-des {
 				min-height: 150px;
 			}
+		}
+	}
+	.video-section {
+		background-color: #fff;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-evenly;
+		align-items: center;
+		height: 600px;
+		padding: 100px 50px;
+		position: relative;
+		top: -100px;
+		span {
+			width: 30%;
 		}
 	}
 }
@@ -935,6 +988,28 @@ button:not(#alert-ok):not(.glitchButtonElement) {
 }
 /* Page Three: End*/
 /* Mobile: Start*/
+@media only screen and (max-width: 900px) {
+	#desktop-only {
+		background-color: rgba(157, 205, 223, 0.99);
+		position: fixed;
+		text-align: center;
+		top: 0px;
+		right: 0px;
+		bottom: 0px;
+		left: 0px;
+		display: flex;
+		justify-content: center;
+		z-index: 1000;
+		align-items: center;
+		text-align: center;
+
+		h2 {
+			color: #fff;
+			margin: 0 20px;
+		}
+	}
+}
+
 @media only screen and (max-width: 1440px) {
 	#page-1 {
 		.title {
